# haskell-json-parser-benchmark

./: ArgsMain.hs  README.md  WithAeson.hs  WithHermes.hs  cabal.project  json-parser-benchmark.cabal
